src/objects/Family_Overview__c.object
<CustomObject>
    <description>Family information for MEP.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account the Family Information is related to.</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Family</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Family Overview</relationshipLabel>
        <relationshipName>Family_Overview</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advisor_Assigned_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Advisor Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CHN_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EFS Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Designation_Changed_Date__c</fullName>
        <description>Shows the designation changed date for a family for FEC Graduation purposes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Designation Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <description>How the family was added into MEP.</description>
        <label>Designation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Attempted</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Worked</fullName>
                </value>
                <value>
                    <fullName>3rd Party/Sibling</fullName>
                    <isActive>false</isActive>
                    <label>3rd Party/Sibling</label>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                    <isActive>false</isActive>
                    <label>Opt Out</label>
                </value>
                <value>
                    <fullName>Researcher Added</fullName>
                    <isActive>false</isActive>
                    <label>Researcher Added</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EHub_Update_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created to track Updation on Eligibility Hub for Designation API</description>
        <label>Eligibility Hub Update Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Needs__c</fullName>
        <description>The level of support (High, Moderate, Low) a family needs from SNI.</description>
        <label>Family Needs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Status__c</fullName>
        <description>Indicates if family has any open cases.  Active &gt; open cases, Inactive = 0 open cases.</description>
        <label>Family Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Family_Contact_Into_Center__c</fullName>
        <description>Indicates how the family was added into MEP</description>
        <label>First Family Contact Into Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member Initiated</fullName>
                </value>
                <value>
                    <fullName>EFS Initiated</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Digital Onboard</fullName>
                </value>
                <value>
                    <fullName>Internal Leadership Referral</fullName>
                </value>
                <value>
                    <fullName>Client Referral</fullName>
                </value>
                <value>
                    <fullName>Internal Partner Referral</fullName>
                </value>
                <value>
                    <fullName>External Partner Referral</fullName>
                </value>
                <value>
                    <fullName>CHN Initiated</fullName>
                    <isActive>false</isActive>
                    <label>CHN Initiated</label>
                </value>
                <value>
                    <fullName>​​​​​​​FEC Initiated</fullName>
                    <isActive>false</isActive>
                    <label>​​​​​​​FEC Initiated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Active_Date__c</fullName>
        <description>Shows the last active date for a family for FEC Graduation purposes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manual_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Referral(Backend)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onshore_Restriction__c</fullName>
        <description>Used to indicate if the group has an Onshore Restriction.  If Yes then only Onshore agents can view the records.  If No then onshore and offshore agents can view the records</description>
        <label>Onshore Restriction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Associations_RichText__c</fullName>
        <description>Consolidated list of program associations for all family members.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Associations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Referring_Source__c</fullName>
        <label>Referring Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>First_Family_Contact_Into_Center__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Behavioral</fullName>
                </value>
                <value>
                    <fullName>Cancer</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Kidney</fullName>
                </value>
                <value>
                    <fullName>MSK</fullName>
                </value>
                <value>
                    <fullName>Optum Financial</fullName>
                </value>
                <value>
                    <fullName>Optum HCA</fullName>
                </value>
                <value>
                    <fullName>Optum Rx</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PHS 3.0/TP</fullName>
                </value>
                <value>
                    <fullName>Provider Services</fullName>
                </value>
                <value>
                    <fullName>UHC A4me</fullName>
                </value>
                <value>
                    <fullName>Women’s Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UHG_Restriction__c</fullName>
        <description>Used to indicate if group has an Onshore restriction and to limit visibility of object</description>
        <label>UHG Restriction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Family Overview</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Family Overview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Family Overview</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Sharing_the_associated_Documents__c</fullName>
        <label>Sharing the associated Documents</label>
    </sharingReasons>
    <validationRules>
        <fullName>Designation_check</fullName>
        <active>true</active>
        <description>SENS need to provide an error when Advisor try to set the designation to deferred or dormant</description>
        <errorConditionFormula>AND(
OR(ISPICKVAL(Designation__c,&apos;Dormant&apos;),ISPICKVAL(Designation__c,&apos;Deferred&apos;)),$Setup.fo_validations__c.Is_Automation__c  &lt;&gt;  true, ISCHANGED(Designation__c) )</errorConditionFormula>
        <errorDisplayField>Designation__c</errorDisplayField>
        <errorMessage>Please choose another designation option as Deferred or Dormant are not available for manual selection.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Family_Overview_Name_Account_read_only</fullName>
        <active>true</active>
        <description>Makes the Family Overview and Account read only for Family Engagement Center profile</description>
        <errorConditionFormula>OR(AND( ISCHANGED( Name ) , $User.Profile_Name__c = &apos;Family Engagement Center&apos;), AND( ISCHANGED(  Account__c  ) , $User.Profile_Name__c = &apos;Center for Health Navigation&apos;))</errorConditionFormula>
        <errorMessage>You do not have permission to edit the Family Overview Name or Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Contact_into_Center_validation</fullName>
        <active>true</active>
        <description>You cannot edit this field when Digital Onboard is First Contact into Center.</description>
        <errorConditionFormula>AND( ISCHANGED(First_Family_Contact_Into_Center__c),ISPICKVAL( PRIORVALUE(First_Family_Contact_Into_Center__c) ,&apos;Digital Onboard&apos;))</errorConditionFormula>
        <errorDisplayField>First_Family_Contact_Into_Center__c</errorDisplayField>
        <errorMessage>You cannot edit this field when Digital Onboard is First Contact into Center.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Populate_Exception</fullName>
        <active>true</active>
        <description>Preventing None from being selected</description>
        <errorConditionFormula>ISPICKVAL(Exception__c,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Exception__c</errorDisplayField>
        <errorMessage>Please select a value.</errorMessage>
    </validationRules>
</CustomObject>